--- a/src/app/componentes/persona/consultar-persona/consultar-persona.component.html
+++ b/src/app/componentes/persona/consultar-persona/consultar-persona.component.html
@@ -1,3 +1,64 @@
-<p>
-  consultar-persona works!
-</p>
+<div class="card">
+  <div class="card-header">
+    Búsqueda
+  </div>
+  <div class="card-body">
+    <div class="row">
+      <div class="col-md-6">
+
+        <div class="input-group mb-3">
+          <div class="input-group-prepend">
+            <span class="input-group-text" id="basic-addon3">Filtro</span>
+          </div>
+          <input [(ngModel)]="termino" (input)="buscarPersona()" type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3">
+        </div>
+
+      </div>
+
+      <div class="col-md-1">
+        <a class="btn btn-primary" href="#/persona/crearpersona/nuevo"><i class="mdi mdi-plus"></i></a>
+      </div>
+
+
+     
+    </div>
+  </div>
+</div>
+
+<div class="card">
+  <div class="card-header">
+    Resultados
+  </div>
+  <div class="card-body">
+      <table class="table table-sm table-striped table-responsive-sm">
+          <thead class=" ">
+            <tr>
+              <th></th>
+              <th scope="col">Identificación</th>
+              <th scope="col">Nombre / Razón Social</th>
+              <th scope="col">Teléfono</th>
+              <th scope="col">Correo</th>
+              <th scope="col">Estado</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let persona of personas"> 
+             
+              <td>
+                  <a class="btn btn-sm btn-primary"  title="Editar persona" href="#/persona/crearpersona/{{persona.id}}"><i class="mdi mdi-pencil"></i></a>
+                <button class="btn btn-sm btn-danger" title="Elimina persona"><i class="mdi mdi-delete"></i></button>
+                
+              </td>
+              <td>{{persona.cedula }}</td>
+              <td><a class="btn btn-link" href="#/persona/informacionpersona/{{persona.id}}">{{persona.nombre}}</a></td>
+              <td>{{persona.telefono}}</td>
+              <td>{{persona.correo}}</td>
+              <td>{{persona.estado}}</td>
+            </tr>
+         
+         
+          </tbody>
+        </table>
+
+  </div>
+</div>
