--- a/src/app/componentes/persona/crear-persona/crear-persona.component.html
+++ b/src/app/componentes/persona/crear-persona/crear-persona.component.html
@@ -1,23 +1,23 @@
 <div class="row">
   <div class="col-md-6">
 
-    <div class="form-group">
+    <div class="form-group input-group-sm">
       <label for="estado">Estado</label>
-      <select [(ngModel)]="persona.estado" class="form-control" id="estado">
+      <select [(ngModel)]="persona.estado" class="form-control input-sm" id="estado">
         <option value="ACTIVO">Activo</option>
         <option value="INACTIVO">Inactivo</option>
       </select>
     </div>
-    <div class="form-group">
+    <div class="form-group input-group-sm">
       <label for="cedula">Cédula / RUC</label>
-      <input [disabled]="id!='nuevo'" type="text" (input)="validarCedula()" maxlength="13" [(ngModel)]="persona.cedula" class="form-control"
+      <input [disabled]="id!='nuevo'" type="text" (input)="validarCedula()" maxlength="13" [(ngModel)]="persona.cedula" class="form-control input-sm"
         id="cedula">
       <div *ngIf="error.cedula!=''" class="alert alert-danger" role="alert">
         <strong>Error: </strong> {{error.cedula}}
       </div>
     </div>
 
-    <div class="form-group">
+    <div class="form-group input-group-sm">
       <label for="nombre">Nombre / Razón social</label>
       <input (input)="validarNombre()" type="text" [(ngModel)]="persona.nombre" maxlength="50" class="form-control" id="nombre">
       <div *ngIf="error.nombre!=''" class="alert alert-danger" role="alert">
@@ -30,7 +30,7 @@
   </div>
 
   <div class="col-md-6">
-    <div class="form-group">
+    <div class="form-group input-group-sm">
       <label for="telefono">Teléfono</label>
       <input (input)="validarTelefono()" type="text" [(ngModel)]="persona.telefono" maxlength="50" class="form-control" id="telefono">
       <div *ngIf="error.telefono!=''" class="alert alert-danger" role="alert">
@@ -39,7 +39,7 @@
     </div>
 
 
-    <div class="form-group">
+    <div class="form-group input-group-sm">
       <label for="direccion">Dirección</label>
       <input (input)="validarDireccion()" [(ngModel)]="persona.direccion" type="text" class="form-control" id="direccion">
       <div *ngIf="error.direccion!=''" class="alert alert-danger" role="alert">
@@ -48,7 +48,7 @@
     </div>
 
 
-    <div class="form-group">
+    <div class="form-group input-group-sm">
       <label for="correo">Correo electrónico</label>
       <input (input)="validarEmail()" [(ngModel)]="persona.correo" type="email" class="form-control" id="correo">
       <div *ngIf="error.correo!=''" class="alert alert-danger" role="alert">
@@ -56,7 +56,7 @@
       </div>
     </div>
 
-    <div class="form-group">
+    <div class="form-group input-group-sm">
       <button [disabled]="error.cedula!='' || persona.cedula==''  || error.nombre!='' || persona.nombre=='' || error.direccion!='' || persona.direccion=='' || error.telefono!='' || persona.telefono=='' || error.cedula!='' || persona.cedula=='' || error.correo!='' || persona.correo=='' "
         (click)="guardarPersona()" class="btn btn-primary">Guardar</button>
     </div>
