--- a/src/app/componentes/persona/informacion-persona/informacion-persona.component.html
+++ b/src/app/componentes/persona/informacion-persona/informacion-persona.component.html
@@ -99,7 +99,7 @@
                   <thead>
                     <tr>
                       <th></th>
-                      <th scope="col">Placa</th>
+                      <th scope="col">ID</th>
                       <th scope="col">Marca</th>
                       <th scope="col">Modelo</th>
                       <th scope="col">Color</th>
