--- a/src/app/componentes/vehiculo/crear-vehiculo/crear-vehiculo.component.html
+++ b/src/app/componentes/vehiculo/crear-vehiculo/crear-vehiculo.component.html
@@ -1,3 +1,76 @@
-<p>
-  crear-vehiculo works!
-</p>
+<div class="row">
+  <div class="col-md-6">
+
+
+    <div class="form-group">
+      <label for="placa">Placa</label>
+      <input [disabled]="id!='nuevo'" (input)="validarPlaca()" maxlength="10" type="text" [(ngModel)]="vehiculo.placa" class="form-control" id="placa">
+
+      <div *ngIf="error.placa!=''" class="alert alert-danger" role="alert">
+        <strong>Error: </strong> {{error.placa}}
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label for="marca">Marca</label>
+      <input type="text" (input)="validarMarca()" maxlength="20" [(ngModel)]="vehiculo.marca" class="form-control" id="marca">
+      <div *ngIf="error.marca!=''" class="alert alert-danger" role="alert">
+        <strong>Error: </strong> {{error.marca}}
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label for="modelo">Modelo</label>
+      <input (input)="validarModelo()" type="text" [(ngModel)]="vehiculo.modelo" maxlength="50" class="form-control" id="modelo">
+      <div *ngIf="error.modelo!=''" class="alert alert-danger" role="alert">
+        <strong>Error: </strong> {{error.modelo}}
+      </div>
+    </div>
+
+    <div class="form-group">
+        <label for="modelo">Color</label>
+        <input (input)="validarColor()" type="text" [(ngModel)]="vehiculo.color"  class="form-control" id="color">
+        <div *ngIf="error.color!=''" class="alert alert-danger" role="alert">
+          <strong>Error: </strong> {{error.color}}
+        </div>
+      </div>
+
+    
+
+
+
+  </div>
+
+  <div class="col-md-6">
+      <div class="form-group">
+          <label for="anio">Año</label>
+          <input (input)="validarAnio()" type="number" [(ngModel)]="vehiculo.anio" maxlength="4" class="form-control" id="anio">
+          <div *ngIf="error.anio!=''" class="alert alert-danger" role="alert">
+            <strong>Error: </strong> {{error.anio}}
+          </div>
+        </div>
+    
+        <div class="form-group">
+          <label for="numeroChasis">Número de chasis</label>
+          <input (input)="validarNumeroChasis()" type="text" [(ngModel)]="vehiculo.numeroChasis" maxlength="20" class="form-control" id="numeroChasis">
+          <div *ngIf="error.numeroChasis!=''" class="alert alert-danger" role="alert">
+            <strong>Error: </strong> {{error.numeroChasis}}
+          </div>
+        </div>
+    
+        <div class="form-group">
+            <label for="numeroMotor">Número de motor</label>
+            <input (input)="validarNumeroMotor()" type="text" [(ngModel)]="vehiculo.numeroMotor" maxlength="20" class="form-control" id="numeroMotor">
+            <div *ngIf="error.numeroMotor!=''" class="alert alert-danger" role="alert">
+              <strong>Error: </strong> {{error.numeroMotor}}
+            </div>
+          </div>
+    
+        <div class="form-group">
+          <button [disabled]="error.placa!='' || vehiculo.placa=='' || error.marca!='' || vehiculo.marca=='' || error.modelo!='' || vehiculo.marca=='' || error.anio!='' || vehiculo.anio=='' || error.numeroChasis!='' || error.numeroMotor!='' || error.placa!='' || vehiculo.placa=='' "
+            (click)="guardarVehiculo()" class="btn btn-primary">Guardar</button>
+        </div>
+    
+
+  </div>
+</div>
