--- a/src/app/componentes/persona/consultar-persona/consultar-persona.component.html
+++ b/src/app/componentes/persona/consultar-persona/consultar-persona.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <div class="card-header">
+  <div class="card-header bg-primary text-white">
     Búsqueda
   </div>
   <div class="card-body">
@@ -26,7 +26,7 @@
 </div>
 
 <div class="card">
-  <div class="card-header">
+  <div class="card-header bg-primary text-white">
     Resultados
   </div>
   <div class="card-body">
