--- a/src/app/layouts/full/full.component.html
+++ b/src/app/layouts/full/full.component.html
@@ -52,7 +52,7 @@
     <!-- footer -->
     <!-- ============================================================== -->
     <footer class="footer">
-        © 2018 Admin Pro Angular by wrappixel.com
+        © 2018 Corporación Kaizen
     </footer>
     <!-- ============================================================== -->
     <!-- End footer -->
