--- a/src/assets/scss/variable.scss
+++ b/src/assets/scss/variable.scss
@@ -13,10 +13,10 @@ $headingfont:'Montserrat', sans-serif;
 /*Theme Colors*/
 
 $topbar: #1976d2;
-$sidebar: #fff;
+$sidebar: white;
 $sidebar-white: #e5edef;
 $sidebar-alt:#edf0f5;
-$bodycolor: #f4f6f9;
+$bodycolor:#ecf0f1;
 $headingtext: #455a64;
 $bodytext: #67757c; 
 $sidebar-text: #687384;
@@ -31,7 +31,7 @@ $themecolor-dark: #028ee1;
 $danger: #ef5350;
 $success: #06d79c;
 $warning: #ffb22b;
-$primary: #745af2;
+$primary: #1f6db5;
 $info: #398bf7; 
 $inverse: #2f3d4a;
 $secondary: #cccccc;
