--- a/src/app/componentes/persona/informacion-persona/informacion-persona.component.html
+++ b/src/app/componentes/persona/informacion-persona/informacion-persona.component.html
@@ -1,70 +1,91 @@
 <div class="row">
   <div class="col-md-12">
     <div class="card">
-      <div class="card-header">
+      <div class="card-header bg-primary text-white">
+        Información
 
-        <div class="float-md-right">
-          <a class="btn btn-primary" href="#/persona/crearpersona/{{persona.id}}">
-            <i class="mdi mdi-pencil"></i>
-          </a>
-        </div>
 
       </div>
-      <ul class="list-group list-group-flush">
 
-        <li class="list-group-item">
-          <div class="row">
-            <div class="col-md-3">
-              <strong>Estado:</strong>
-            </div>
-            <div class="col-md-9">{{persona.estado}}</div>
-          </div>
-        </li>
+      <div class="card-body">
 
+        <div class="row">
 
-        <li class="list-group-item">
-          <div class="row">
-            <div class="col-md-3">
-              <strong>Cédula/RUC:</strong>
+          <div class="col-md-12">
+            <div class=" float-md-right">
+
+              <a class="btn btn-pencil" href="#/persona/crearpersona/{{persona.id}}" title="Editar" >
+                <i class="mdi mdi-pencil"></i>
+              </a>
             </div>
-            <div class="col-md-9">{{persona.cedula}}</div>
           </div>
-        </li>
-        <li class="list-group-item">
-          <div class="row">
-            <div class="col-md-3">
-              <strong>Nombre:</strong>
-            </div>
-            <div class="col-md-9">{{persona.nombre}}</div>
-          </div>
-        </li>
-        <li class="list-group-item">
-          <div class="row">
-            <div class="col-md-3">
-              <strong>Teléfono:</strong>
-            </div>
-            <div class="col-md-9">{{persona.telefono}}</div>
-          </div>
-        </li>
-        <li class="list-group-item">
-          <div class="row">
-            <div class="col-md-3">
-              <strong>Dirección:</strong>
-            </div>
-            <div class="col-md-9">{{persona.direccion}}</div>
-          </div>
-        </li>
-        <li class="list-group-item">
-          <div class="row">
-            <div class="col-md-3">
-              <strong>Correo:</strong>
-            </div>
-            <div class="col-md-9">{{persona.correo}}</div>
-          </div>
-        </li>
+
+        </div>
+
+        <div class="row">
+          <div class="col-md-12">
+            <ul class="list-group list-group-flush">
+
+              <li class="list-group-item">
+                <div class="row">
+                  <div class="col-md-3">
+                    <strong>Estado:</strong>
+                  </div>
+                  <div class="col-md-9">{{persona.estado}}</div>
+                </div>
+              </li>
 
 
-      </ul>
+              <li class="list-group-item">
+                <div class="row">
+                  <div class="col-md-3">
+                    <strong>Cédula/RUC:</strong>
+                  </div>
+                  <div class="col-md-9">{{persona.cedula}}</div>
+                </div>
+              </li>
+              <li class="list-group-item">
+                <div class="row">
+                  <div class="col-md-3">
+                    <strong>Nombre:</strong>
+                  </div>
+                  <div class="col-md-9">{{persona.nombre}}</div>
+                </div>
+              </li>
+              <li class="list-group-item">
+                <div class="row">
+                  <div class="col-md-3">
+                    <strong>Teléfono:</strong>
+                  </div>
+                  <div class="col-md-9">{{persona.telefono}}</div>
+                </div>
+              </li>
+              <li class="list-group-item">
+                <div class="row">
+                  <div class="col-md-3">
+                    <strong>Dirección:</strong>
+                  </div>
+                  <div class="col-md-9">{{persona.direccion}}</div>
+                </div>
+              </li>
+              <li class="list-group-item">
+                <div class="row">
+                  <div class="col-md-3">
+                    <strong>Correo:</strong>
+                  </div>
+                  <div class="col-md-9">{{persona.correo}}</div>
+                </div>
+              </li>
+
+
+            </ul>
+          </div>
+
+        </div>
+
+
+      </div>
+
     </div>
   </div>
 
@@ -72,32 +93,33 @@
 </div>
 
 <div class="card">
+  <div class="card-header bg-primary text-white">
+    Rol de la persona en la empresa
+  </div>
   <div class="card-body">
-    <h3 class="card-title">Rol de persona en la empresa</h3>
-
     <ngb-accordion #acc="ngbAccordion" class="accordion">
 
 
-      <ngb-panel id="toggle-1" title="Cliente">
+      <ngb-panel id="toggle-1" class="bg-primary" title="Cliente">
         <ng-template ngbPanelContent>
 
           <button *ngIf="persona.cliente.length==0" class="btn btn-primary" (click)="activarCliente()">Activar</button>
 
           <div *ngIf="persona.cliente.length==1" class="col-md-12">
+
             <div class="card">
-              <div class="card-header">
+              <div class="card-header bg-primary text-white">
+                Vehículos
+              </div>
+              <div class="card-body">
 
                 <div class="float-md-right">
-                  
+
                   <button class="btn btn-primary" (click)="agregarVehiculo()">
                     <i class="mdi mdi-plus"></i>
                   </button>
                 </div>
-              </div>
-              <div class="card-body">
 
-                <h4>Vehículos</h4>
-                <hr>
                 <table class="table table-responsive-sm">
                   <thead>
                     <tr>
@@ -113,11 +135,11 @@
                     <tr *ngFor="let item of persona.cliente[0].vehiculos">
 
                       <td>
-                     
+
                         <a class="btn btn-sm btn-success" title="Modificar vehículo" href="#/vehiculo/crearvehiculo/{{item.id}}">
                           <i class="mdi mdi-pencil"></i>
                         </a>
-                        <button  class="btn btn-sm btn-danger" (click)="desvincularVehiculo(item, item.dueno==persona.cliente[0].id)" title="Desvincular vehiculo" >
+                        <button class="btn btn-sm btn-danger" (click)="desvincularVehiculo(item, item.dueno==persona.cliente[0].id)" title="Desvincular vehiculo">
                           <i class="mdi mdi-delete"></i>
                         </button>
                       </td>
@@ -126,7 +148,8 @@
                       <td>{{item.modelo}}</td>
                       <td>{{item.color}}</td>
                       <td>
-                        <input [checked]="item.dueno==persona.cliente[0].id" (change)="cambiarEsDueno(item.id, item.dueno==persona.cliente[0].id)" type="checkbox">
+                        <input [checked]="item.dueno==persona.cliente[0].id" (change)="cambiarEsDueno(item.id, item.dueno==persona.cliente[0].id)"
+                          type="checkbox">
                       </td>
                     </tr>
 
@@ -134,8 +157,9 @@
                 </table>
 
               </div>
-
             </div>
+
+
           </div>
 
 
@@ -147,32 +171,33 @@
 
           <div *ngIf="persona.usuario.length==1">
 
-            <input [checked]="roles.Administrador" (change)="modificarRoles()" [(ngModel)]="roles.Administrador" class="form-check-input" type="checkbox" value="1"
-              id="rol1">
+            <input [checked]="roles.Administrador" (change)="modificarRoles()" [(ngModel)]="roles.Administrador" class="form-check-input"
+              type="checkbox" value="1" id="rol1">
             <label class="form-check-label" for="rol1">
               Administrador
             </label>
             <br>
 
-            <input [checked]="roles.Tecnico" [(ngModel)]="roles.Tecnico" (change)="modificarRoles()" class="form-check-input" type="checkbox" value="2" id="rol2">
+            <input [checked]="roles.Tecnico" [(ngModel)]="roles.Tecnico" (change)="modificarRoles()" class="form-check-input" type="checkbox"
+              value="2" id="rol2">
             <label class="form-check-label" for="rol2">
               Técnico
             </label>
             <br>
 
-            <div *ngIf="roles.Tecnico"> 
+            <div *ngIf="roles.Tecnico">
               <label for="grupo" class="form-label">Seleccionar un grupo</label>
-              <select id="grupo" [(ngModel)]="persona.usuario[0].grupo" (change)="cambiarGrupo()"   name="" id="">
-              
+              <select id="grupo" [(ngModel)]="persona.usuario[0].grupo" (change)="cambiarGrupo()" name="" id="">
+
                 <option *ngFor="let grupo of grupos" value="{{grupo.id}}">{{grupo.descripcion}}</option>
               </select>
               <br>
             </div>
-            
 
 
-            <input [checked]="roles.AsesorServicio" [(ngModel)]="roles.AsesorServicio" (change)="modificarRoles()" class="form-check-input" type="checkbox" value="3"
-              id="rol3">
+
+            <input [checked]="roles.AsesorServicio" [(ngModel)]="roles.AsesorServicio" (change)="modificarRoles()" class="form-check-input"
+              type="checkbox" value="3" id="rol3">
             <label class="form-check-label" for="rol3">
               Asesor de servicio
             </label>
@@ -186,6 +211,8 @@
         </ng-template>
       </ngb-panel>
     </ngb-accordion>
+
+
 
   </div>
 </div>
