--- a/src/app/componentes/orden/crear-orden/crear-orden.component.html
+++ b/src/app/componentes/orden/crear-orden/crear-orden.component.html
@@ -5,7 +5,7 @@
   <div class="card-body">
     Buscar por:
     <select [(ngModel)]="filtro" (change)="cambiarFiltro()">
-      <option *ngFor="let filtro of filtros"  value="{{filtro}}">{{filtro}}</option>
+      <option *ngFor="let filtro of filtros" value="{{filtro}}">{{filtro}}</option>
     </select>
 
 
@@ -22,32 +22,32 @@
       </div>
       <div class="card-body">
 
-        <div *ngIf="clienteSeleccionado!=null">
+        <div *ngIf="orden.cliente!=null">
           <div class="row">
             <div class="col-md-4">ID:</div>
             <div class="col-md-8">
-              <input readonly [(ngModel)]="clienteSeleccionado.persona.cedula" type="text">
+              <input readonly [(ngModel)]="orden.cliente.persona.cedula" type="text">
             </div>
           </div>
 
           <div class="row">
             <div class="col-md-4">Nombre:</div>
             <div class="col-md-8">
-              <input readonly [(ngModel)]="clienteSeleccionado.persona.nombre" type="text">
+              <input readonly [(ngModel)]="orden.cliente.persona.nombre" type="text">
             </div>
           </div>
 
           <div class="row">
             <div class="col-md-4">Dirección:</div>
             <div class="col-md-8">
-              <input readonly [(ngModel)]="clienteSeleccionado.persona.direccion" type="text">
+              <input readonly [(ngModel)]="orden.cliente.persona.direccion" type="text">
             </div>
           </div>
 
           <div class="row">
             <div class="col-md-4">Teléfono:</div>
             <div class="col-md-8">
-              <input readonly [(ngModel)]="clienteSeleccionado.persona.telefono" type="text">
+              <input readonly [(ngModel)]="orden.cliente.persona.telefono" type="text">
             </div>
           </div>
         </div>
@@ -95,9 +95,10 @@
         </div>
 
         <div>
-          <button [disabled]="vehiculos.length==0" (click)="navegarVehiculos('-')"><<</button>
-         {{vehiculoSeleccionado.posicion+1}}-{{vehiculos.length}}
-          <button [disabled]="vehiculos.length==0" (click)="navegarVehiculos('+')">>></button>
+          <button [disabled]="vehiculos.length==0" (click)="navegarVehiculos('-')">
+            <<</button>
+              {{vehiculoSeleccionado.posicion+1}}-{{vehiculos.length}}
+              <button [disabled]="vehiculos.length==0" (click)="navegarVehiculos('+')">>></button>
         </div>
 
 
@@ -109,6 +110,45 @@
 
 <div class="row">
   <div class="col-md-12">
+    <div class="card">
+      <div class="card-header bg-primary text-white">
+        Servicios
+      </div>
+      <div class="card-body">
 
+        <hr>
+        Seleccionar servicios
+        <select class="form-control" (change)="onChange($event.target.value)">
+          <option *ngFor="let servicioDisponible of serviciosDisponibles" value="{{servicioDisponible.id}}">{{servicioDisponible.descripcion}}</option>
+        </select>
+        <hr>
+
+        <table *ngIf="orden.servicios.length>0" class="table table-sm">
+          <thead class="thead-primary">
+            <tr>
+
+              <th scope="col">Servicio</th>
+              <th scope="col">Tiempo estandar</th>
+              <th scope="col">Categoría</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let servicio of orden.servicios">
+              <td>{{servicio.descripcion}}</td>
+              <td>{{servicio.tiempoEstandar}}</td>
+              <td>{{servicio.categoria.descripcion}}</td>
+            </tr>
+
+
+          </tbody>
+        </table>
+
+       
+
+
+      </div>
+    </div>
   </div>
 </div>
+
+<button [disabled]="!orden.servicios.length>0 || orden.cliente== null || orden.vehiculo==null" (click)="guardarOrden()" class="btn btn-primary">Guardar</button>
