--- a/src/app/layouts/full/full.component.html
+++ b/src/app/layouts/full/full.component.html
@@ -6,15 +6,19 @@
         'defaultdark': color == 'defaultdark'
     }
 ">
+
+    <div *ngIf="showMenu">
+        
+    </div>
     <!-- ============================================================== -->
     <!-- Topbar header - style you can find in pages.scss -->
     <!-- ============================================================== -->
-    
+
     <ap-navigation></ap-navigation>
     <!-- ============================================================== -->
     <!-- Left Sidebar - style you can find in sidebar.scss  -->
     <!-- ============================================================== -->
-    <aside class="left-sidebar">
+    <aside  class="left-sidebar">
         <!-- Sidebar scroll-->
         <div class="scroll-sidebar" [perfectScrollbar]="config">
             <ap-sidebar></ap-sidebar>
@@ -47,7 +51,7 @@
     </div>
     <!-- ============================================================== -->
     <!-- End Page wrapper  -->
-    <!-- ============================================================== -->    
+    <!-- ============================================================== -->
     <!-- ============================================================== -->
     <!-- footer -->
     <!-- ============================================================== -->
@@ -57,5 +61,5 @@
     <!-- ============================================================== -->
     <!-- End footer -->
     <!-- ============================================================== -->
-    
+
 </div>
